--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,23 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.google.code.findbugs'
+
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+
+    /** DAGGER 2**/
+    compile "com.google.dagger:dagger:2.7"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.7"
+    provided 'org.glassfish:javax.annotation:10.0-b28' //Required by Dagger2
+
+    /**RxJava**/
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+
+
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+
 }
