--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,7 @@ android:
 
     # The SDK version used to compile your project
     - android-25
+  licenses:
+    - 'android-sdk-license-.+'
 before_install:
     - chmod +x gradlew
