--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,12 @@ language: android
 jdk: oraclejdk8
 android:
   components:
-
+    - tools
     # The BuildTools version used by your project
     - build-tools-25.0.2
+    - platform-tools
+    - extra-android-m2repository
+    - extra-google-android-support
 
     # The SDK version used to compile your project
     - android-25
