--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,10 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    /** Android Support **/
     implementation "com.android.support:appcompat-v7:${rootProject.supportLib}"
-    testCompile 'junit:junit:4.12'
+    implementation "com.android.support:recyclerview-v7:${rootProject.supportLib}"
+    implementation "com.android.support:cardview-v7:${rootProject.supportLib}"
     /** Dagger 2**/
     implementation "com.google.dagger:dagger:${rootProject.dagger}"
     annotationProcessor "com.google.dagger:dagger-compiler:${rootProject.dagger}"
@@ -49,4 +51,8 @@ dependencies {
     implementation "com.jakewharton.timber:timber:${rootProject.timber}"
     /** lifecycle components **/
     implementation "android.arch.lifecycle:extensions:${rootProject.arch}"
+
+    implementation "com.jakewharton:butterknife:${rootProject.butterknife}"
+    annotationProcessor "com.jakewharton:butterknife-compiler:${rootProject.butterknife}"
+    implementation "com.github.vivchar:RendererRecyclerViewAdapter:${rootProject.rendererRecyclerViewAdapter}"
 }
