--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:${rootProject.retrofit}"
     implementation "com.squareup.retrofit2:converter-gson:${rootProject.retrofit}"
     implementation "com.squareup.retrofit2:adapter-rxjava2:${rootProject.retrofit}"
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     /** Timber - library for logging **/
     implementation "com.jakewharton.timber:timber:${rootProject.timber}"
     /** lifecycle components **/
@@ -55,4 +56,5 @@ dependencies {
     implementation "com.jakewharton:butterknife:${rootProject.butterknife}"
     annotationProcessor "com.jakewharton:butterknife-compiler:${rootProject.butterknife}"
     implementation "com.github.vivchar:RendererRecyclerViewAdapter:${rootProject.rendererRecyclerViewAdapter}"
+    implementation "com.squareup.picasso:picasso:${rootProject.picasso}"
 }
