--- a/build.gradle
+++ b/build.gradle
@@ -20,13 +20,15 @@ ext {
     supportLib = "26.1.0"
     dagger = "2.11"
     retrofit = "2.3.0"
-    arch = "1.0.0-rc1"
+    arch = "1.0.0"
     timber = "4.5.1"
     rxjava = "2.1.5"
     rxandroid = "2.0.1"
     butterknife = "8.8.1"
     rendererRecyclerViewAdapter = "1.2.4"
+    loggingInterceptor = "3.6.0"
     picasso = "2.5.2"
+    dart = "1.1.0"
 }
 
 allprojects {
